bk_ida/gccida/c2/split_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48328:4: error: expected ';' after expression
rtx v61; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48328:5: error: use of undeclared identifier 'v61'
rtx v61; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48401:4: error: expected ';' after expression
rtx v134; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48401:5: error: use of undeclared identifier 'v134'
rtx v134; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48416:4: error: expected ';' after expression
rtx v149; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48416:5: error: use of undeclared identifier 'v149'
rtx v149; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48482:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48488:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v5.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48489:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( int *)x0[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48496:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v53, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48496:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v53, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48498:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v53; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48498:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v53; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48507:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1133( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48515:38: error: expected ')'
if ( ix86_comparison_operator( ( rtx)v8, VOIDmode) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48515:30: note: to match this '('
if ( ix86_comparison_operator( ( rtx)v8, VOIDmode) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48517:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48517:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v8; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48526:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_1135( recog_data_0.operand); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48535:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v5.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/insn-recog.c:48536:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int64)x0[1]; 
                ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/split_1/src/obj/insn-recog.o] Error 1
